completed first phase

--- a/notebooks/day1_python_langchain_basics.ipynb
+++ b/notebooks/day1_python_langchain_basics.ipynb
@@ -28,10 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e312e630",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Rohan, Age: 25\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. VARIABLES & TYPES\n",
     "# Python uses snake_case (not camelCase)\n",
@@ -50,10 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b51f96ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "5\n",
+      "[2, 4, 6, 8, 10]\n",
+      "[2, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. LISTS vs ARRAYS\n",
     "# Lists are like JS arrays\n",
@@ -74,10 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "627d0de0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rohan\n",
+      "not provided\n",
+      "name: Rohan\n",
+      "age: 25\n",
+      "skills: ['JavaScript', 'Node.js', 'AWS']\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. DICTIONARIES vs OBJECTS\n",
     "# Dict is like JS object\n",
@@ -98,10 +130,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "61d4761d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text': 'Hello', 'priority': 'normal'}\n",
+      "{'text': 'Urgent!', 'priority': 'high'}\n",
+      "user = Rohan\n",
+      "action = login\n",
+      "status = success\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. FUNCTIONS\n",
     "# Similar to JS, but with some differences\n",
@@ -126,10 +170,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eb9814ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rohan (rohan@example.com)\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. CLASSES (you know this from TypeScript)\n",
     "class User:\n",
@@ -165,10 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8943670b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ OpenRouter API key loaded\n",
+      "ℹ️  LangSmith tracing disabled (set LANGCHAIN_TRACING_V2=true to enable)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -205,14 +267,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5ef1234e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'OPENROUTER_API_KEY' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmessages\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m HumanMessage, SystemMessage\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Initialize LLM with OpenRouter\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# OpenRouter uses OpenAI-compatible API\u001b[39;00m\n\u001b[32m      7\u001b[39m llm = ChatOpenAI(\n\u001b[32m      8\u001b[39m     model=\u001b[33m\"\u001b[39m\u001b[33mopenai/gpt-3.5-turbo\u001b[39m\u001b[33m\"\u001b[39m,  \u001b[38;5;66;03m# or any model on OpenRouter\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     openai_api_key=\u001b[43mOPENROUTER_API_KEY\u001b[49m,\n\u001b[32m     10\u001b[39m     openai_api_base=\u001b[33m\"\u001b[39m\u001b[33mhttps://openrouter.ai/api/v1\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     11\u001b[39m     temperature=\u001b[32m0.7\u001b[39m,\n\u001b[32m     12\u001b[39m )\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m✅ LLM initialized with OpenRouter\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'OPENROUTER_API_KEY' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema import HumanMessage, SystemMessage\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
     "# Initialize LLM with OpenRouter\n",
     "# OpenRouter uses OpenAI-compatible API\n",
@@ -228,10 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fca8321e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangChain is a blockchain-based platform that aims to provide language learning services using blockchain technology. It leverages the decentralized nature of blockchain to offer secure and transparent language learning solutions. Users can access language courses, connect with tutors, and track their progress through the LangChain platform. The platform also uses smart contracts to facilitate payments and ensure trust between users.\n"
+     ]
+    }
+   ],
    "source": [
     "# Simple direct call (like calling the API directly)\n",
     "messages = [\n",
@@ -255,10 +337,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "190e2e46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To read a JSON file in Python, you can use the `json` module which is included in the standard library. Here's a simple example:\n",
+      "\n",
+      "```python\n",
+      "import json\n",
+      "\n",
+      "# Open the JSON file in read mode\n",
+      "with open('data.json', 'r') as file:\n",
+      "    data = json.load(file)\n",
+      "\n",
+      "# Now you can access the data as a Python dictionary\n",
+      "print(data)\n",
+      "```\n",
+      "\n",
+      "In this example, replace `'data.json'` with the path to your JSON file. The `json.load()` function reads the JSON file and returns its contents as a Python dictionary. You can then work with this dictionary in your Python code.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a prompt template\n",
     "prompt = ChatPromptTemplate.from_messages([\n",
@@ -290,12 +393,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "eef16781",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code:\n",
+      "import json\n",
+      "\n",
+      "# Open the JSON file\n",
+      "with open('data.json', 'r') as file:\n",
+      "    data = json.load(file)\n",
+      "\n",
+      "# Print the contents of the JSON file\n",
+      "print(data)\n",
+      "\n",
+      "Explanation: The code snippet demonstrates how to read a JSON file in Python using the 'json' module. It opens a JSON file named 'data.json', reads its contents, and then prints the data stored in the file. Make sure to replace 'data.json' with the actual file path.\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.output_parsers import PydanticOutputParser\n",
+    "from langchain_core.output_parsers import PydanticOutputParser\n",
     "from pydantic import BaseModel, Field\n",
     "\n",
     "# Define output structure (like TypeScript interfaces!)\n",
@@ -342,7 +463,15 @@
    "execution_count": null,
    "id": "f0a0beeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sure! A vector database is like a giant file cabinet where information is stored in a way that makes it easy to find and use. Instead of just storing data like words or numbers, a vector database also remembers the relationships between different pieces of information. This helps us quickly search for and retrieve the specific information we need, kind of like having a very organized and efficient library for data.\n"
+     ]
+    }
+   ],
    "source": [
     "def simple_chatbot(user_input: str, system_prompt: str = \"You are a helpful assistant.\") -> str:\n",
     "    \"\"\"\n",
@@ -511,8 +640,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
